--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,153 @@
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+/* Jost Variable Font */
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/Jost-VariableFont_wght.ttf') format('truetype');
+  font-weight: 100 900; /* Range for variable font weights */
+  font-style: normal;
 }
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/Jost-Italic-VariableFont_wght.ttf') format('truetype');
+  font-weight: 100 900; /* Range for variable font weights */
+  font-style: italic;
+}
+
+/* Jost Static Fonts */
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
+}
+
+/* Repeat for other static font styles */
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-ExtraLight.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-Medium.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-SemiBold.ttf') format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-Bold.ttf') format('truetype');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-ExtraBold.ttf') format('truetype');
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-Black.ttf') format('truetype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+/* Italics for Static Fonts */
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-ThinItalic.ttf') format('truetype');
+  font-weight: 100;
+  font-style: italic;
+}
+
+/* Repeat for other italic static font styles */
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-ExtraLightItalic.ttf') format('truetype');
+  font-weight: 200;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-LightItalic.ttf') format('truetype');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-Italic.ttf') format('truetype');
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-MediumItalic.ttf') format('truetype');
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-SemiBoldItalic.ttf') format('truetype');
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-BoldItalic.ttf') format('truetype');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-ExtraBoldItalic.ttf') format('truetype');
+  font-weight: 800;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Jost';
+  src: url('fonts/Jost/static/Jost-BlackItalic.ttf') format('truetype');
+  font-weight: 900;
+  font-style: italic;
+}
+
+
+body {
+  font-family: 'Jost', sans-serif;
+}
+
